--- a/index.html
+++ b/index.html
@@ -5,12 +5,10 @@
 
 </head><body>
 
-<h1>テストマップ</h1>
+<h1>学校map</h1>
 <csv-map>
-名前,URL,geo3x3,photo
-ヨコガワ分店,https://volga-rice.jimdofree.com/,,volga-yokogawa.jpg
-サンドーム福井,http://www.sankan.jp/sundome/,E9138732236
-福井高専,https://www.fukui-nct.ac.jp/,E9138732251953
+名前,緯度,経度
+永平寺中学校,36.099276583275184, 136.32801937074512
 </csv-map>
 
 </body>
