--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html><html><head><meta charset="utf-8"><meta name="viewport" content="width=device-width">
 <script type="module" src="https://code4fukui.github.io/csv-map/csv-map.js"></script>
 
-<title>テストマップ</title>
+<title>MIERUKA</title>
 
 </head><body>
 
-<h1>テストマップ</h1>
+<h1>MIERUKA</h1>
 <csv-map>
-名前,URL,geo3x3,photo
-ヨコガワ分店,https://volga-rice.jimdofree.com/,,volga-yokogawa.jpg
-サンドーム福井,http://www.sankan.jp/sundome/,E9138732236
-福井高専,https://www.fukui-nct.ac.jp/,E9138732251953
+名前,緯度,経度
+恐竜博物館,36.08342912175552, 136.50653415195018
+アオッサ駐車場,36.06039185191502, 136.2233084880863
 </csv-map>
 
 </body>
